--- a/package.json
+++ b/package.json
@@ -53,12 +53,10 @@
         "mac": {
             "category": "The Advanced Observing App"
         },
-        "extraResources": [
-            {
-                "from": "bundled",
-                "to": "bundled"
-            }
-        ]
+        "extraResources": [{
+            "from": "bundled",
+            "to": "bundled"
+        }]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
@@ -159,5 +157,8 @@
         "source-map-support": "^0.5.19",
         "typescript": "^4.4.4",
         "worker-loader": "^2.0.0"
+    },
+    "config": {
+        "titan-reactor-api": "1.0.0"
     }
 }
