--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
         "bw-casclib": "^2.0.0",
         "bw-chk": "^1.3.0",
         "byte-size": "^8.1.0",
-        "camera-controls": "^1.33.2",
+        "camera-controls": "@1.34.7",
         "concat": "1.0.3",
         "concat-stream": "^2.0.0",
         "d3-ease": "1.0.6",
