--- a/package.json
+++ b/package.json
@@ -53,23 +53,22 @@
         "mac": {
             "category": "The Advanced Observing App"
         },
-        "extraResources": [{
-            "from": "bundled",
-            "to": "bundled"
-        }]
+        "extraResources": [
+            {
+                "from": "bundled",
+                "to": "bundled"
+            }
+        ]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-react": "^7.14.5",
         "@npmcli/package-json": "^1.0.1",
-        "assert": "^2.0.0",
         "bl": "^5.0.0",
         "bw-casclib": "^2.0.0",
         "bw-chk": "^1.3.0",
-        "byte-size": "^8.1.0",
         "camera-controls": "@1.34.7",
-        "concat": "1.0.3",
         "concat-stream": "^2.0.0",
         "d3-ease": "1.0.6",
         "deepmerge": "^4.2.2",
@@ -92,9 +91,7 @@
         "postprocessing": "6.28.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-jsx-parser": "^1.29.0",
         "react-markdown": "^8.0.0",
-        "remark-gfm": "^3.0.1",
         "sanitize-filename": "^1.6.3",
         "scm-extractor": "^1.0.6",
         "semver": "^7.3.5",
