--- a/package.json
+++ b/package.json
@@ -53,12 +53,10 @@
         "mac": {
             "category": "The Advanced Observing App"
         },
-        "extraResources": [
-            {
-                "from": "bundled",
-                "to": "bundled"
-            }
-        ]
+        "extraResources": [{
+            "from": "bundled",
+            "to": "bundled"
+        }]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
@@ -106,13 +104,10 @@
         "@babel/preset-typescript": "^7.15.0",
         "@types/babel__core": "^7.1.18",
         "@types/bl": "^5.0.2",
-        "@types/buble": "^0.20.1",
         "@types/concat-stream": "^2.0.0",
         "@types/d3-ease": "^3.0.0",
-        "@types/dompurify": "^2.3.3",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.0.3",
-        "@types/js-yaml": "^4.0.5",
         "@types/libnpmsearch": "^2.0.3",
         "@types/lodash.debounce": "^4.0.6",
         "@types/lodash.get": "^4.4.6",
@@ -126,14 +121,14 @@
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
         "@types/semver": "^7.3.9",
-        "@types/three": "^0.133.1",
+        "@types/three": "^0.141.0",
         "@typescript-eslint/eslint-plugin": "^5.1.0",
         "@typescript-eslint/parser": "^5.1.0",
         "babel-jest": "^26.3.0",
         "babel-loader": "^8.2.2",
         "benny": "^3.7.1",
         "dotenv": "^8.2.0",
-        "electron": "17.1.2",
+        "electron": "19.0.0",
         "electron-builder": "^22.8.1",
         "electron-webpack": "^2.8.2",
         "electron-webpack-ts": "^4.0.1",
