--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
         "mac": {
             "category": "The Advanced Observing App"
         },
-        "extraResources": [{
-            "from": "bundled",
-            "to": "bundled"
-        }]
+        "extraResources": [
+            {
+                "from": "bundled",
+                "to": "bundled"
+            }
+        ]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
@@ -83,6 +85,7 @@
         "lodash.shuffle": "^4.2.0",
         "lodash.throttle": "^4.1.1",
         "mkdirp": "^1.0.4",
+        "node-fetch": "2",
         "pacote": "^13.0.3",
         "pkware-wasm": "^1.0.0",
         "postprocessing": "6.28.2",
