--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "sanitize-filename": "^1.6.3",
         "scm-extractor": "^1.0.6",
         "semver": "^7.3.5",
+        "ses": "^0.15.17",
         "three": "0.137.0",
         "threejs-shader-materials": "MasatoMakino/threejs-shader-materials",
         "webpack": "4.42.1",
