--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-react": "^7.14.5",
         "@npmcli/package-json": "^1.0.1",
+        "@types/lodash.set": "^4.3.7",
         "bl": "^5.0.0",
         "bw-casclib": "^2.0.0",
         "bw-chk": "^1.3.0",
@@ -82,6 +83,7 @@
         "lodash.get": "^4.4.2",
         "lodash.groupby": "^4.6.0",
         "lodash.omit": "^4.5.0",
+        "lodash.set": "^4.3.2",
         "lodash.shuffle": "^4.2.0",
         "lodash.throttle": "^4.1.1",
         "mkdirp": "^1.0.4",
