--- a/package.json
+++ b/package.json
@@ -53,12 +53,10 @@
         "mac": {
             "category": "The Advanced Observing App"
         },
-        "extraResources": [
-            {
-                "from": "bundled",
-                "to": "bundled"
-            }
-        ]
+        "extraResources": [{
+            "from": "bundled",
+            "to": "bundled"
+        }]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
@@ -157,6 +155,7 @@
         "worker-loader": "^2.0.0"
     },
     "config": {
-        "titan-reactor-api": "1.1.0"
+        "titan-reactor-api": "2.0.0",
+        "titan-reactor-macro-api": "1.0.0"
     }
 }
