--- a/package.json
+++ b/package.json
@@ -53,15 +53,20 @@
         "mac": {
             "category": "The Advanced Observing App"
         },
-        "extraResources": [{
-            "from": "bundled",
-            "to": "bundled"
-        }]
+        "extraResources": [
+            {
+                "from": "bundled",
+                "to": "bundled"
+            }
+        ]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-react": "^7.14.5",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
+        "@mui/material": "^5.9.1",
         "@npmcli/package-json": "^1.0.1",
         "@types/lodash.set": "^4.3.7",
         "bl": "^5.0.0",
@@ -91,6 +96,7 @@
         "postprocessing": "6.28.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-helmet": "^6.1.0",
         "react-markdown": "^8.0.0",
         "sanitize-filename": "^1.6.3",
         "scm-extractor": "^1.0.6",
@@ -122,8 +128,9 @@
         "@types/mkdirp": "^1.0.2",
         "@types/muicss": "^0.9.4",
         "@types/pacote": "^11.1.3",
-        "@types/react": "^18.2.0",
-        "@types/react-dom": "^18.2.0",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
+        "@types/react-helmet": "^6.1.5",
         "@types/semver": "^7.3.9",
         "@types/three": "^0.137.0",
         "@typescript-eslint/eslint-plugin": "^5.1.0",
