--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
+        "react-inline-editing": "^1.0.10",
         "react-markdown": "^8.0.0",
         "sanitize-filename": "^1.6.3",
         "scm-extractor": "^1.0.6",
@@ -160,6 +161,10 @@
         "source-map-support": "^0.5.19",
         "typescript": "^4.4.4",
         "worker-loader": "^2.0.0"
+    },
+    "resolutions": {
+        "@types/react": "18.2.0",
+        "@types/react-dom": "18.2.0"
     },
     "config": {
         "titan-reactor-api": "2.0.0",
