--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "@emotion/styled": "^11.9.3",
         "@mui/material": "^5.9.1",
         "@npmcli/package-json": "^1.0.1",
+        "@rweich/streamdeck-ts": "^4.0.3",
         "@types/lodash.set": "^4.3.7",
         "bl": "^5.0.0",
         "bw-casclib": "^2.0.0",
@@ -75,6 +76,7 @@
         "camera-controls": "@1.34.7",
         "concat-stream": "^2.0.0",
         "d3-ease": "1.0.6",
+        "deep-diff": "^1.0.2",
         "deepmerge": "^4.2.2",
         "electron-devtools-installer": "^3.2.0",
         "electron-is-dev": "^1.2.0",
@@ -116,6 +118,7 @@
         "@types/bl": "^5.0.2",
         "@types/concat-stream": "^2.0.0",
         "@types/d3-ease": "^3.0.0",
+        "@types/deep-diff": "^1.0.1",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.0.3",
         "@types/libnpmsearch": "^2.0.3",
