--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
         "staticSourceDirectory": "bundled",
         "title": "Titan Reactor",
         "main": {
-            "sourceDirectory": "src/main",
-            "extraEntries": ["@/command-center.preload.ts"]
+            "sourceDirectory": "src/main"
         },
         "renderer": {
             "sourceDirectory": "src/renderer",
@@ -103,8 +102,10 @@
         "scm-extractor": "^1.0.6",
         "semver": "^7.3.5",
         "ses": "^0.15.17",
-        "three": "0.137.0",
+        "three": "0.143.0",
+        "three-gpu-pathtracer": "^0.0.5",
         "threejs-shader-materials": "MasatoMakino/threejs-shader-materials",
+        "troika-three-utils": "^0.46.0",
         "webpack": "4.42.1",
         "winreg": "^1.2.4",
         "zustand": "3.3.3"
@@ -130,11 +131,11 @@
         "@types/mkdirp": "^1.0.2",
         "@types/muicss": "^0.9.4",
         "@types/pacote": "^11.1.3",
-        "@types/react": "^18.0.15",
-        "@types/react-dom": "^18.0.6",
+        "@types/react": "18.0.15",
+        "@types/react-dom": "18.0.6",
         "@types/react-helmet": "^6.1.5",
         "@types/semver": "^7.3.9",
-        "@types/three": "^0.137.0",
+        "@types/three": "^0.142.0",
         "@typescript-eslint/eslint-plugin": "^5.1.0",
         "@typescript-eslint/parser": "^5.1.0",
         "babel-jest": "^26.3.0",
