--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "dist": "yarn build && electron-builder",
         "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null",
         "dev": "electron-webpack dev",
+        "predev": "clean-dev-win",
         "dist:run": "yarn build && electron dist/main/main.js",
         "lint": "yarn eslint .",
         "clean-dev-win": "taskkill /f /im node.exe",
