--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.wasm filter=lfs diff=lfs merge=lfs -text
 *.wasm.js filter=lfs diff=lfs merge=lfs -text
+bundled/drop-your-socks.mp3 filter=lfs diff=lfs merge=lfs -text
+bundled/wraith.glb filter=lfs diff=lfs merge=lfs -text
