--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 
     "strict": true,
     "preserveConstEnums": true,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "isolatedModules": false,
     "strictPropertyInitialization": true,
     "forceConsistentCasingInFileNames": true,
@@ -36,7 +36,22 @@
       "@stores": ["renderer/stores/index.ts"],
       "@utils/*": ["renderer/utils/*"],
       "@ipc/*": ["renderer/ipc/*"],
-      "@ipc": ["renderer/ipc/index.ts"]
+      "@ipc": ["renderer/ipc/index.ts"],
+      "@plugins/*": ["renderer/plugins/*"],
+      "@plugins": ["renderer/plugins/index.ts"],
+      "@process-replay/*": ["renderer/process-replay/*"],
+      "@buffer-view/*": ["renderer/buffer-view/*"],
+      "@buffer-view": ["renderer/buffer-view/index.ts"],
+      "@openbw/*": ["renderer/openbw/*"],
+      "@openbw": ["renderer/openbw/index.ts"],
+      "@audio/*": ["renderer/audio/*"],
+      "@audio": ["renderer/audio/index.ts"],
+      "@render/*": ["renderer/render/*"],
+      "@render": ["renderer/render/index.ts"],
+      "@input/*": ["renderer/input/*"],
+      "@input": ["renderer/input/index.ts"],
+      "@macros/*": ["renderer/macros/*"],
+      "@macros": ["renderer/input/macros.ts"]
     },
     "typeRoots": ["./src/common/types/declarations", "./node_modules/@types"],
     "outDir": "generated",
