more home scene tweaks

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.wasm.js filter=lfs diff=lfs merge=lfs -text
 bundled/drop-your-socks.mp3 filter=lfs diff=lfs merge=lfs -text
 bundled/wraith.glb filter=lfs diff=lfs merge=lfs -text
+bundled/battlecruiser.glb filter=lfs diff=lfs merge=lfs -text
+bundled/asteroid.glb filter=lfs diff=lfs merge=lfs -text
