refactor: remove TerrainInfo and replace w Terrain

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ bundled/wraith.glb filter=lfs diff=lfs merge=lfs -text
 bundled/battlecruiser.glb filter=lfs diff=lfs merge=lfs -text
 bundled/asteroid.glb filter=lfs diff=lfs merge=lfs -text
 bundled/FireBall03_8x8.exr filter=lfs diff=lfs merge=lfs -text
+bundled/remix.ogg filter=lfs diff=lfs merge=lfs -text
