--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
         "mac": {
             "category": "The Advanced Observing App"
         },
-        "extraResources": [{
-            "from": "bundled",
-            "to": "bundled"
-        }]
+        "extraResources": [
+            {
+                "from": "bundled",
+                "to": "bundled"
+            }
+        ]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
@@ -97,6 +99,7 @@
         "pacote": "^13.0.3",
         "pkware-wasm": "^1.0.0",
         "postprocessing": "6.28.5",
+        "random": "^3.0.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
@@ -105,6 +108,7 @@
         "scm-extractor": "^1.0.6",
         "semver": "^7.3.5",
         "ses": "^0.15.17",
+        "simplex-noise": "^4.0.0",
         "three": "0.143.0",
         "three-gpu-pathtracer": "^0.0.5",
         "threejs-shader-materials": "MasatoMakino/threejs-shader-materials",
