--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
         "@emotion/styled": "^11.9.3",
         "@mui/material": "^5.9.1",
         "@npmcli/package-json": "^1.0.1",
-        "@rweich/streamdeck-ts": "^4.0.3",
         "@types/lodash.set": "^4.3.7",
         "bl": "^5.0.0",
         "bw-casclib": "^2.0.0",
@@ -114,7 +113,7 @@
         "threejs-shader-materials": "MasatoMakino/threejs-shader-materials",
         "tone": "^14.7.77",
         "troika-three-utils": "^0.46.0",
-        "tunajs": "^1.0.15",
+        "typescript": "^4.4.4",
         "webpack": "4.42.1",
         "winreg": "^1.2.4",
         "zustand": "3.3.3"
@@ -138,7 +137,7 @@
         "@types/lodash.shuffle": "^4.2.6",
         "@types/lodash.throttle": "^4.1.6",
         "@types/mkdirp": "^1.0.2",
-        "@types/muicss": "^0.9.4",
+        "@types/node": "^18.7.1",
         "@types/pacote": "^11.1.3",
         "@types/react": "18.0.15",
         "@types/react-dom": "18.0.6",
@@ -149,7 +148,6 @@
         "@typescript-eslint/parser": "^5.1.0",
         "babel-jest": "^26.3.0",
         "babel-loader": "^8.2.2",
-        "benny": "^3.7.1",
         "dotenv": "^8.2.0",
         "electron": "19.0.0",
         "electron-builder": "^22.8.1",
@@ -170,7 +168,6 @@
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "source-map-support": "^0.5.19",
-        "typescript": "^4.4.4",
         "url-loader": "^4.1.1",
         "worker-loader": "^2.0.0"
     },
