--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "description": "The Advanced Starcraft Broodwar Observing Tool",
     "main": "src/main/index.js",
     "scripts": {
+        "build-api-types": "ts-node -T .\\build\\apis\\built-api-types.ts",
         "tscheck": "tsc --noEmit",
         "test": "jest --watchAll",
         "test:once": "jest --runInBand",
@@ -56,12 +57,10 @@
         "mac": {
             "category": "The Advanced Observing App"
         },
-        "extraResources": [
-            {
-                "from": "bundled",
-                "to": "bundled"
-            }
-        ]
+        "extraResources": [{
+            "from": "bundled",
+            "to": "bundled"
+        }]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
