--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "The Advanced Starcraft Broodwar Observing Tool",
     "main": "src/main/index.js",
     "scripts": {
-        "build-api-types": "ts-node -T .\\build\\apis\\built-api-types.ts",
+        "build-api-types": "ts-node -T .\\build\\apis\\build-api-types.ts",
         "tscheck": "tsc --noEmit",
         "test": "jest --watchAll",
         "test:once": "jest --runInBand",
@@ -112,6 +112,7 @@
         "threejs-shader-materials": "MasatoMakino/threejs-shader-materials",
         "tone": "^14.7.77",
         "troika-three-utils": "^0.46.0",
+        "ts-morph": "^15.1.0",
         "typescript": "^4.4.4",
         "webpack": "4.42.1",
         "winreg": "^1.2.4",
