--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
       "@core": ["renderer/core/index.ts"],
       "@stores/*": ["renderer/stores/*"],
       "@stores": ["renderer/stores/index.ts"],
+      "@utils/casclib": ["renderer/utils/casclib-win"],
       "@utils/*": ["renderer/utils/*"],
       "@ipc/*": ["renderer/ipc/*"],
       "@ipc": ["renderer/ipc/index.ts"],
