--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "electron-is-dev": "^1.2.0",
         "express": "^4.17.3",
         "iconv-lite": "0.6.3",
+        "immer": "^9.0.15",
         "leva": "^0.9.23",
         "libnpmsearch": "^5.0.0",
         "lodash.debounce": "^4.0.8",
