--- a/package.json
+++ b/package.json
@@ -57,12 +57,10 @@
         "mac": {
             "category": "The Advanced Observing App"
         },
-        "extraResources": [
-            {
-                "from": "bundled",
-                "to": "bundled"
-            }
-        ]
+        "extraResources": [{
+            "from": "bundled",
+            "to": "bundled"
+        }]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
@@ -74,7 +72,7 @@
         "@npmcli/package-json": "^1.0.1",
         "@types/lodash.set": "^4.3.7",
         "bl": "^5.0.0",
-        "bw-casclib": "^2.0.0",
+        "bw-casclib": "^2.0.1",
         "bw-chk": "^1.3.0",
         "camera-controls": "@1.34.7",
         "concat-stream": "^2.0.0",
