--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
             "category": "Game",
             "icon": "icon256x256.ico"
         },
-        "extraResources": [{
-            "from": "bundled",
-            "to": "bundled"
-        }]
+        "extraResources": [
+            {
+                "from": "bundled",
+                "to": "bundled"
+            }
+        ]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
@@ -118,10 +120,9 @@
         "troika-three-utils": "^0.46.0",
         "ts-morph": "^15.1.0",
         "typescript": "^4.4.4",
+        "webpack": "4.42.1",
         "winreg": "^1.2.4",
-        "zustand": "3.3.3",
-        "webpack": "4.42.1"
-
+        "zustand": "3.3.3"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.15.8",
@@ -154,7 +155,7 @@
         "babel-jest": "^26.3.0",
         "babel-loader": "^8.2.2",
         "dotenv": "^8.2.0",
-        "electron": "19.0.0",
+        "electron": "20.0.0",
         "electron-builder": "^22.8.1",
         "electron-webpack": "^2.8.2",
         "electron-webpack-ts": "^4.0.1",
