--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
         "@types/d3-ease": "^3.0.0",
         "@types/deep-diff": "^1.0.1",
         "@types/express": "^4.17.13",
-        "@types/jest": "^27.0.3",
+        "@types/jest": "^29.0.3",
         "@types/libnpmsearch": "^2.0.3",
         "@types/lodash.debounce": "^4.0.6",
         "@types/lodash.get": "^4.4.6",
@@ -169,12 +169,14 @@
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.2.0",
         "glslify-loader": "^2.0.0",
-        "jest": "^27.2.4",
+        "jest": "^29.0.3",
+        "jest-environment-jsdom": "^29.0.3",
         "prettier": "^2.4.1",
         "raw-loader": "^4.0.2",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "source-map-support": "^0.5.19",
+        "ts-jest": "^29.0.1",
         "ts-node": "^10.9.1",
         "url-loader": "^4.1.1",
         "worker-loader": "^2.0.0"
