--- a/package.json
+++ b/package.json
@@ -165,12 +165,14 @@
         "eslint-import-resolver-alias": "^1.1.2",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-jest": "^25.2.2",
+        "eslint-plugin-jest-extended": "^2.0.0",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.2.0",
         "glslify-loader": "^2.0.0",
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
+        "jest-extended": "^3.1.0",
         "prettier": "^2.4.1",
         "raw-loader": "^4.0.2",
         "reflect-metadata": "^0.1.13",
