--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
             "category": "Game",
             "icon": "icon256x256.ico"
         },
-        "extraResources": [{
-            "from": "bundled",
-            "to": "bundled"
-        }]
+        "extraResources": [
+            {
+                "from": "bundled",
+                "to": "bundled"
+            }
+        ]
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
@@ -121,7 +123,7 @@
         "typescript": "^4.4.4",
         "webpack": "4.42.1",
         "winreg": "^1.2.4",
-        "zustand": "3.3.3"
+        "zustand": "4.1.1"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.15.8",
