--- a/package.json
+++ b/package.json
@@ -71,12 +71,15 @@
         "@babel/core": "^7.11.6",
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-react": "^7.14.5",
+        "@codemirror/lang-javascript": "^6.1.0",
         "@npmcli/package-json": "^1.0.1",
         "@types/lodash.set": "^4.3.7",
+        "@typescript/vfs": "^1.4.0",
         "bl": "^5.0.0",
         "bw-casclib": "^2.0.1",
         "bw-chk": "^1.3.0",
         "camera-controls": "@1.34.7",
+        "codemirror": "^6.0.1",
         "concat-stream": "^2.0.0",
         "d3-ease": "1.0.6",
         "deep-diff": "^1.0.2",
