--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
     "productName": "Titan Reactor",
     "version": "0.6.5",
     "description": "An OpenBW Renderer",
-    "main": "src/main/index.js",
+    "main": "dist/electron/main/index.js",
     "scripts": {
-        "dev": "electron-webpack dev",
+        "dev": "vite",
         "sanity": "yarn typecheck && yarn test:once",
         "typecheck": "tsc --noEmit",
         "test": "jest --watchAll",
         "test:once": "jest --runInBand",
         "test:debug": "node --inspect node_modules/jest/bin/jest --runInBand",
         "clear-cache": "rimraf .cache dist",
-        "build": "electron-webpack",
-        "dist": "yarn build && electron-builder",
-        "dist:run": "yarn build && electron dist/main/main.js",
+        "build": "vite build",
+        "dist": "vite build && electron-builder",
         "lint": "yarn eslint .",
         "clean-dev-win": "taskkill /f /im node.exe",
-        "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch",
+        "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch && yarn electron-builder install-app-deps",
         "build-api-types": "ts-node -T .\\build\\apis\\build-api-types.ts"
     },
     "browserslist": [
@@ -33,24 +32,14 @@
         "url": "https://github.com/imbateam-gg/titan-reactor/issues"
     },
     "homepage": "https://github.com/imbateam-gg/titan-reactor#readme",
-    "electronWebpack": {
-        "commonSourceDirectory": "src/common",
-        "staticSourceDirectory": "bundled",
-        "title": "Titan Reactor",
-        "main": {
-            "sourceDirectory": "src/main"
-        },
-        "renderer": {
-            "sourceDirectory": "src/renderer",
-            "webpackConfig": "build/renderer.config.js",
-            "template": "src/renderer/template.html"
-        },
-        "whiteListedModules": [
-            "zustand",
-            "leva"
-        ]
-    },
     "build": {
+        "directories": {
+            "output": "release/${version}",
+            "buildResources": "build"
+        },
+        "files": [
+            "dist"
+        ],
         "appId": "imbateam.titan-reactor",
         "productName": "Titan Reactor",
         "mac": {
@@ -66,6 +55,13 @@
                 "to": "bundled"
             }
         ]
+    },
+    "debug": {
+        "env": {
+            "VITE_DEV_SERVER_HOSTNAME": "127.0.0.1",
+            "VITE_DEV_SERVER_PORT": 3344,
+            "VITE_DEV_SERVER_URL": "http://127.0.0.1:3344"
+        }
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
@@ -121,7 +117,7 @@
         "troika-three-utils": "^0.46.0",
         "ts-morph": "^15.1.0",
         "typescript": "^4.4.4",
-        "webpack": "4.42.1",
+        "vite-plugin-esmodule": "^1.4.2",
         "winreg": "^1.2.4",
         "zustand": "4.1.1"
     },
@@ -153,13 +149,11 @@
         "@types/three": "^0.142.0",
         "@typescript-eslint/eslint-plugin": "^5.1.0",
         "@typescript-eslint/parser": "^5.1.0",
+        "@vitejs/plugin-react": "^2.1.0",
         "babel-jest": "^26.3.0",
-        "babel-loader": "^8.2.2",
         "dotenv": "^8.2.0",
         "electron": "20.0.0",
         "electron-builder": "^22.8.1",
-        "electron-webpack": "^2.8.2",
-        "electron-webpack-ts": "^4.0.1",
         "eslint": "^7.16.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-import-resolver-alias": "^1.1.2",
@@ -169,19 +163,17 @@
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "glslify-loader": "^2.0.0",
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
         "jest-extended": "^3.1.0",
         "prettier": "^2.4.1",
-        "raw-loader": "^4.0.2",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "source-map-support": "^0.5.19",
         "ts-jest": "^29.0.1",
         "ts-node": "^10.9.1",
-        "url-loader": "^4.1.1",
-        "worker-loader": "^2.0.0"
+        "vite": "^3.1.3",
+        "vite-plugin-electron": "^0.9.3"
     },
     "resolutions": {
         "@types/react": "18.0.15",
