--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "dist": "vite build && electron-builder",
         "lint": "yarn eslint .",
         "clean-dev-win": "taskkill /f /im node.exe",
-        "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch && yarn electron-builder install-app-deps",
+        "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch",
         "build-api-types": "ts-node -T .\\build\\apis\\build-api-types.ts"
     },
     "browserslist": [
@@ -69,7 +69,7 @@
         "bl": "^5.0.0",
         "bw-casclib": "^2.0.1",
         "bw-chk": "^1.3.0",
-        "camera-controls": "1.34.7",
+        "camera-controls": "1.37.2",
         "codemirror": "^6.0.1",
         "concat-stream": "^2.0.0",
         "d3-ease": "1.0.6",
@@ -93,7 +93,7 @@
         "node-fetch": "2",
         "pacote": "^13.0.3",
         "pkware-wasm": "^1.0.0",
-        "postprocessing": "6.28.5",
+        "postprocessing": "6.28.7",
         "random": "^3.0.6",
         "rbush": "^3.0.1",
         "react": "^18.2.0",
@@ -104,7 +104,7 @@
         "scm-extractor": "^1.0.6",
         "semver": "^7.3.5",
         "ses": "^0.15.17",
-        "three": "0.143.0",
+        "three": "0.145.0",
         "three-gpu-pathtracer": "^0.0.5",
         "three-instanced-uniforms-mesh": "^0.46.0",
         "three-janitor": "^2.0.1",
@@ -165,10 +165,6 @@
         "vite": "^3.1.3",
         "vite-plugin-electron": "^0.9.3",
         "vite-plugin-esmodule": "^1.4.2"
-    },
-    "resolutions": {
-        "@types/react": "18.0.15",
-        "@types/react-dom": "18.0.6"
     },
     "config": {
         "titan-reactor-api": "2.0.0"
