--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         }
     },
     "dependencies": {
+        "@brakebein/threeoctree": "^2.0.1",
         "@codemirror/lang-javascript": "^6.1.0",
         "@npmcli/package-json": "^2.0.0",
         "@types/lodash.set": "^4.3.7",
@@ -97,7 +98,6 @@
         "pkware-wasm": "^1.0.0",
         "postprocessing": "6.28.7",
         "random": "^3.0.6",
-        "rbush": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
