--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
         "@types/lodash.throttle": "^4.1.6",
         "@types/mkdirp": "^1.0.2",
         "@types/node": "^18.7.1",
+        "@types/offscreencanvas": "^2019.7.0",
         "@types/pacote": "^11.1.3",
         "@types/react": "18.0.21",
         "@types/react-dom": "18.0.6",
