--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "dev": "vite",
         "sanity": "yarn typecheck && yarn test:once",
+        "deep-cleanse": "yarn eslint .",
         "typecheck": "tsc --noEmit",
         "test": "jest --watchAll",
         "test:once": "jest --runInBand",
@@ -14,7 +15,7 @@
         "clear-cache": "rimraf .cache dist",
         "build": "vite build",
         "dist": "vite build && electron-builder",
-        "lint": "yarn eslint .",
+        "lint": "yarn eslint . && yarn prettier --check .",
         "clean-dev-win": "taskkill /f /im node.exe",
         "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch",
         "build-api-types": "ts-node -T .\\build\\apis\\build-api-types.ts"
@@ -147,7 +148,7 @@
         "electron": "21.1.0",
         "electron-builder": "^23.3.3",
         "eslint": "^8.24.0",
-        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-alias": "^1.1.2",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-jest": "^27.1.1",
@@ -158,7 +159,8 @@
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
         "jest-extended": "^3.1.0",
-        "prettier": "^2.4.1",
+        "prettier": "^2.7.1",
+        "prettier-plugin-glsl": "^0.0.5",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "source-map-support": "^0.5.19",
