--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,64 +1,64 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "noImplicitOverride": true,
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "jsx": "react-jsx",
+    "compilerOptions": {
+        "target": "ES2020",
+        "module": "esnext",
+        "moduleResolution": "node",
+        "noImplicitOverride": true,
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        "emitDecoratorMetadata": true,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "jsx": "react-jsx",
 
-    "strict": true,
-    "preserveConstEnums": true,
-    "skipLibCheck": true,
-    "isolatedModules": false,
-    "strictPropertyInitialization": true,
-    "forceConsistentCasingInFileNames": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "noErrorTruncation": true,
+        "strict": true,
+        "preserveConstEnums": true,
+        "skipLibCheck": true,
+        "isolatedModules": false,
+        "strictPropertyInitialization": true,
+        "forceConsistentCasingInFileNames": true,
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
+        "noErrorTruncation": true,
 
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
 
-    "inlineSources": true,
-    "sourceMap": true,
-    "removeComments": false,
+        "inlineSources": true,
+        "sourceMap": true,
+        "removeComments": false,
 
-    "baseUrl": "src",
-    "paths": {
-      "common/*": ["common/*"],
-      "@image/*": ["renderer/image/*"],
-      "@image": ["renderer/image/index.ts"],
-      "@core/*": ["renderer/core/*"],
-      "@core": ["renderer/core/index.ts"],
-      "@stores/*": ["renderer/stores/*"],
-      "@stores": ["renderer/stores/index.ts"],
-      "@utils/*": ["renderer/utils/*"],
-      "@ipc/*": ["renderer/ipc/*"],
-      "@ipc": ["renderer/ipc/index.ts"],
-      "@plugins/*": ["renderer/plugins/*"],
-      "@plugins": ["renderer/plugins/index.ts"],
-      "@process-replay/*": ["renderer/process-replay/*"],
-      "@buffer-view/*": ["renderer/buffer-view/*"],
-      "@buffer-view": ["renderer/buffer-view/index.ts"],
-      "@openbw/*": ["renderer/openbw/*"],
-      "@openbw": ["renderer/openbw/index.ts"],
-      "@audio/*": ["renderer/audio/*"],
-      "@audio": ["renderer/audio/index.ts"],
-      "@render/*": ["renderer/render/*"],
-      "@render": ["renderer/render/index.ts"],
-      "@input/*": ["renderer/input/*"],
-      "@input": ["renderer/input/index.ts"],
-      "@macros/*": ["renderer/macros/*"],
-      "@macros": ["renderer/macros/index.ts"]
+        "baseUrl": "src",
+        "paths": {
+            "common/*": ["common/*"],
+            "@image/*": ["renderer/image/*"],
+            "@image": ["renderer/image/index.ts"],
+            "@core/*": ["renderer/core/*"],
+            "@core": ["renderer/core/index.ts"],
+            "@stores/*": ["renderer/stores/*"],
+            "@stores": ["renderer/stores/index.ts"],
+            "@utils/*": ["renderer/utils/*"],
+            "@ipc/*": ["renderer/ipc/*"],
+            "@ipc": ["renderer/ipc/index.ts"],
+            "@plugins/*": ["renderer/plugins/*"],
+            "@plugins": ["renderer/plugins/index.ts"],
+            "@process-replay/*": ["renderer/process-replay/*"],
+            "@buffer-view/*": ["renderer/buffer-view/*"],
+            "@buffer-view": ["renderer/buffer-view/index.ts"],
+            "@openbw/*": ["renderer/openbw/*"],
+            "@openbw": ["renderer/openbw/index.ts"],
+            "@audio/*": ["renderer/audio/*"],
+            "@audio": ["renderer/audio/index.ts"],
+            "@render/*": ["renderer/render/*"],
+            "@render": ["renderer/render/index.ts"],
+            "@input/*": ["renderer/input/*"],
+            "@input": ["renderer/input/index.ts"],
+            "@macros/*": ["renderer/macros/*"],
+            "@macros": ["renderer/macros/index.ts"]
+        },
+        "typeRoots": ["./src/common/types/declarations", "./node_modules/@types"],
+        "outDir": "generated",
+        "resolveJsonModule": true
     },
-    "typeRoots": ["./src/common/types/declarations", "./node_modules/@types"],
-    "outDir": "generated",
-    "resolveJsonModule": true
-  },
-  "include": ["src/**/*"],
-  "exclude": ["./node_modules/**/*", "generated"]
+    "include": ["src/**/*"],
+    "exclude": ["./node_modules/**/*", "generated", "dist", "release"]
 }
