--- a/package.json
+++ b/package.json
@@ -169,7 +169,8 @@
         "ts-node": "^10.9.1",
         "vite": "^3.1.3",
         "vite-plugin-electron": "^0.9.3",
-        "vite-plugin-esmodule": "^1.4.2"
+        "vite-plugin-esmodule": "^1.4.2",
+        "webgl-lint": "^1.9.3"
     },
     "config": {
         "titan-reactor-api": "2.0.0"
