--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
         "forceConsistentCasingInFileNames": true,
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "noErrorTruncation": true,
+        "noUncheckedIndexedAccess": true,
 
         "noUnusedLocals": true,
         "noUnusedParameters": true,
