--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "titan-reactor",
     "productName": "Titan Reactor",
-    "version": "0.6.8",
+    "version": "0.6.9",
     "description": "An OpenBW Renderer",
     "main": "dist/electron/main/index.js",
     "typings": "dist/types/index.d.ts",
@@ -19,7 +19,7 @@
         "lint": "yarn eslint . && yarn prettier --check .",
         "clean-dev-win": "taskkill /f /im node.exe",
         "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch",
-        "build-api": "ts-node -T .\\build\\api\\index.ts"
+        "build-api-types": "ts-node -T .\\build\\api-types\\index.ts"
     },
     "browserslist": [
         "last 2 Chrome versions"
@@ -67,7 +67,14 @@
     },
     "dependencies": {
         "@brakebein/threeoctree": "^2.0.1",
-        "@codemirror/lang-javascript": "^6.1.0",
+        "@codemirror/autocomplete": "^6.5.1",
+        "@codemirror/commands": "^6.2.2",
+        "@codemirror/lang-javascript": "^6.1.6",
+        "@codemirror/language": "^6.6.0",
+        "@codemirror/lint": "^6.2.1",
+        "@codemirror/search": "^6.3.0",
+        "@codemirror/state": "^6.2.0",
+        "@codemirror/view": "^6.9.5",
         "@npmcli/package-json": "^2.0.0",
         "@types/lodash.set": "^4.3.7",
         "@types/rbush": "^3.0.0",
@@ -76,10 +83,10 @@
         "bw-casclib": "^2.0.1",
         "bw-chk": "^1.4.0",
         "camera-controls": "1.37.2",
-        "codemirror": "^6.0.1",
         "concat-stream": "^2.0.0",
         "deep-diff": "^1.0.2",
         "deepmerge": "^4.2.2",
+        "electron": "20.3.3",
         "electron-devtools-installer": "^3.2.0",
         "electron-is-dev": "^2.0.0",
         "express": "^4.17.3",
@@ -98,7 +105,7 @@
         "node-fetch": "3.2.10",
         "pacote": "^14.0.0",
         "pkware-wasm": "^1.0.0",
-        "postprocessing": "6.29.0",
+        "postprocessing": "6.30.2",
         "random": "^3.0.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -108,7 +115,7 @@
         "scm-extractor": "^1.0.6",
         "semver": "^7.3.5",
         "ses": "^0.15.17",
-        "three": "0.145.0",
+        "three": "0.150.0",
         "three-gpu-pathtracer": "^0.0.6",
         "three-instanced-uniforms-mesh": "^0.46.0",
         "three-janitor": "^2.0.1",
@@ -142,12 +149,11 @@
         "@types/react-dom": "18.0.6",
         "@types/react-helmet": "^6.1.5",
         "@types/semver": "^7.3.9",
-        "@types/three": "^0.144.0",
+        "@types/three": "^0.150.1",
         "@typescript-eslint/eslint-plugin": "^5.1.0",
         "@typescript-eslint/parser": "^5.1.0",
         "@vitejs/plugin-react": "^2.1.0",
         "dotenv": "^16.0.3",
-        "electron": "20.3.3",
         "electron-builder": "^23.3.3",
         "eslint": "^8.24.0",
         "eslint-config-prettier": "^8.5.0",
