--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
+        "target": "esnext",
         "module": "esnext",
         "moduleResolution": "node",
         "noImplicitOverride": true,
