update to electron 25

--- a/package.json
+++ b/package.json
@@ -77,13 +77,13 @@
         "@types/rbush": "^3.0.0",
         "@typescript/vfs": "^1.4.0",
         "bl": "^5.0.0",
-        "bw-casclib": "^2.0.1",
+        "bw-casclib": "^2.0.2",
         "bw-chk": "^1.4.0",
         "camera-controls": "1.37.2",
         "concat-stream": "^2.0.0",
         "deep-diff": "^1.0.2",
         "deepmerge": "^4.2.2",
-        "electron": "20.3.3",
+        "electron": "^25.2.0",
         "electron-devtools-installer": "^3.2.0",
         "electron-is-dev": "^2.0.0",
         "express": "^4.17.3",
